--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "recharts": "^2.13.3"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@vitejs/plugin-react": "^4.0.3",
