--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.15.0",
-    "recharts": "^2.13.3"
+    "recharts": "^2.13.3",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
