--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 # VITE_BASE_URL=http://192.168.10.8:5001
 VITE_BASE_URL=http://164.90.205.5:5001/
-# VITE_BASE_URL=http://10.0.80.49:5010/
+# VITE_BASE_URL=http://10.0.80.49:5010
